tests/valid/test_macro_03.wyal
define f(int x) is:
    x >= 0

define f(bool x) is:
    x == true

assert:
    forall(int x):
        if:
            x >= 0
        then:
            f(x)

assert:
    forall(bool x):
        if:
            x != false
        then:
            f(x)

