tests/invalid/test_075.wyal
define f(int&!int x) is:
    x >= 0

